--- a/task1,2_character_lm.ipynb
+++ b/task1,2_character_lm.ipynb
@@ -128,7 +128,7 @@
     "        self.sym_to_ind = {val: i for i, val in enumerate(symbols)}\n",
     "        self.ind_to_sym = {v: k for k, v in self.sym_to_ind.items()}\n",
     "    \n",
-    "    # предполагается, что каждая строка в батче это один символ\n",
+    "    # we imply that each string in batch is exactly one symbol(incl. special)\n",
     "    def __call__(self, batch):\n",
     "        if isinstance(batch, Iterable) and not isinstance(batch, str):\n",
     "            looked_up_batch = [self(sample) for sample in batch]\n",
@@ -580,6 +580,13 @@
     "        if i > len(test_data_loader) - 21:\n",
     "            print(i, 'word:', ''.join(word))\n",
     "            print(*list(zip(word, word_probs)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that probabilities are pretty high for most words, also `<END>` symbol has very high probability at the end of words, so our language model knows when the word should be finished."
    ]
   },
   {
