--- a/task3_sentiment_rnn.ipynb
+++ b/task3_sentiment_rnn.ipynb
@@ -43,7 +43,13 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
-    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score"
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set(style='darkgrid', font_scale=1.3)"
    ]
   },
   {
@@ -221,8 +227,8 @@
     "train_iter, val_iter, test_iter = BucketIterator.splits(\n",
     "        (trn, vld, tst),\n",
     "        batch_sizes=(64, 64, 64),\n",
-    "        sort=False,\n",
-    "        sort_key=lambda x: len(x),\n",
+    "        sort=True,\n",
+    "        # we don't need to specify sort_key because it is set implicitly in Example object\n",
     "        sort_within_batch=False,\n",
     "        device='cuda',\n",
     "#         device='cpu',\n",
